--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Steph M.",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.5.6",
     "express": "^4.15.3",
     "mongodb": "^2.2.30",
     "react": "^15.6.1",
